# nonmyopia

./: .gitignore  .gitmodules  README.md  _0_main.py  _0_main_dc.py  _0_main_gp.py  _10_budgeted_bo.py  _11_kernels.py  _12_alpine.py  _13_embedder.py  _14_sequence_design_func.py  _15_syngp.py  _16_env_wrapper.py  _17_logcos.py  _1_run.py  _1_run_dc.py  _2_actor.py  _2_actor_dc.py  _3_amortized_network.py  _3_amortized_network_antbo.py  _3_amortized_network_dc.py  _4_bo_acqf.py  _4_qhes.py  _4_qhes_dc.py  _4_qhes_ts.py  _5_evalplot.py  _6_samplers.py  _7_utils.py  _8_tools.py  _9_semifuncs.py  acqfs.py  actor.py  compute_metrics.py  draw_metrics.py  draw_regrets.py  draw_trajectories.py  env_embedder.py  environment.yml  evalplot.py  hes_alpine.py  (+19 more)
ackey_function/: embedder.py  generate_data.py  result.csv  train.py
examples/: bestofk_alpine.py  branin.py  formal_plot_alpine_levelset.py  formal_plot_alpine_multilevelset.py  formal_plot_multihills_levelset.py  formal_plot_mvs.py  formal_plot_satellite.py  formal_plot_topk.py  levelset_alpine.py  levelset_branin.py  levelset_multihills.py  multihills.py  multilevelset_alpine.py  multilevelset_multihills.py  mvs_multihills.py  opt_synthfunc.py  opt_synthfunc_ddpg.py  opt_synthfunc_single_iter.py  play_01.py  play_03.py  topk_alpine.py  topk_branin.py  topk_multihills.py  vaccination.py
experiment/: _1_exp.py  _2_env.py  (+2 more)
lampo/: LICENSE  README.md  pyproject.toml
lampo/configs/: sample_llama3.yaml
lampo/src/lampo/: ppo.py  ppo_vllm.py  ppo_vllm_single.py  reward_model.py  reward_server.py  utils.py  worker_wraper.py
(+2784 files in other folders)
